@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-09-24T16:22:02Z",
-  "count_outdated" : 534,
-  "uniques_outdated" : 308,
-  "count" : 567,
-  "uniques" : 326,
+  "timestamp" : "2022-09-25T01:46:41Z",
+  "count_outdated" : 537,
+  "uniques_outdated" : 310,
+  "count" : 570,
+  "uniques" : 328,
   "clones" : [
-    {
-      "timestamp": "2022-09-10T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 1, 3 ],
-      "uniques": 2,
-      "uniques_minmax": [ 1, 2 ]
-    },
     {
       "timestamp": "2022-09-11T00:00:00Z",
       "count": 2,
@@ -102,6 +95,13 @@
       "count_minmax": [ 1, 3 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-09-24T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ]
     }
   ]
 }
