@@ -1,3 +1,11 @@
+2022-09-25T01:46:41Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3120507765
+* notice: last 14d: unq all: 5 33
+* notice: prev accum: outdated-unq outdated-all / unq all: 308 534 / 326 567
+* notice: next accum: outdated-unq outdated-all / unq all: 310 537 / 328 570
+* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +2 +2 -0 -0 / 2 2
+* notice: removed / changed dates: [2022-09-10] / [2022-09-24]
+
 2022-09-24T16:22:02Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3118983155
 * notice: last 14d: unq all: 5 33
